@@ -1,6 +1,7 @@
 2009-11-05  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Set version to 0.9.24
+	* Reverted changeset #25963: No more code to log deprecated method calls as they are still in use in Core
 	* Follow-up of RFC #12452: Reflected change of visibility of method compileFieldCfg() in t3lib_sqlparser
 
 2009-11-04  Xavier Perseguers  <typo3@perseguers.ch>
